# ragtest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: basic_eval.yaml
ragtest/: __init__.py  chunking.py  cli.py  config.py  dataset.py  generation.py  report.py  retrieval.py  runner.py
tests/: test_chunking.py  test_dataset.py  test_generation.py  test_retrieval.py  test_runner.py
